ランダム書き込みのテスト用、クライアントのFirebaseからの分離に対応

--- a/TR.BidsWebRtc.Console/TR.BidsWebRtc.Console.csproj
+++ b/TR.BidsWebRtc.Console/TR.BidsWebRtc.Console.csproj
@@ -10,4 +10,13 @@
 		<ProjectReference Include="..\TR.BidsWebRtc\TR.BidsWebRtc.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="TR.BIDSSMemLib.structs" Version="1.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Remove="token.txt" />
+		<EmbeddedResource Include="token.txt" />
+	</ItemGroup>
+
 </Project>
