--- a/TR.BidsWebRtc/TR.BidsWebRtc.csproj
+++ b/TR.BidsWebRtc/TR.BidsWebRtc.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFrameworks>netstandard2.0;net48</TargetFrameworks>
 		<LangVersion>12.0</LangVersion>
 		<Nullable>enable</Nullable>
-		<Version>0.0.1</Version>
+		<Version>0.0.2</Version>
 		<Authors>Tetsu Otter</Authors>
 		<Company>Tech Otter</Company>
 		<Product>BIDS Project</Product>
@@ -23,9 +23,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SIPSorcery" Version="8.0.9" />
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.5.0" />
-		<PackageReference Include="System.Text.Json" Version="9.0.2" />
+		<PackageReference Include="SIPSorcery" Version="8.0.6" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
 	</ItemGroup>
 
 </Project>
